Harden backend error handling and clean up services